--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "colorama>=0.4.6",
+    "loguru>=0.7.3",
     "sounddevice>=0.5.2",
     "soundfile>=0.13.1",
 ]
