--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "deep-translator>=1.11.4",
     "loguru>=0.7.3",
     "python-dotenv>=1.1.1",
+    "replicate>=1.0.7",
     "requests>=2.32.5",
     "sounddevice>=0.5.2",
     "soundfile>=0.13.1",
