--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,11 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "colorama>=0.4.6",
-    "deep-translator>=1.11.4",
+    "dotenv>=0.9.9",
     "loguru>=0.7.3",
     "python-dotenv>=1.1.1",
     "replicate>=1.0.7",
     "requests>=2.32.5",
     "sounddevice>=0.5.2",
-    "soundfile>=0.13.1",
-    "textblob>=0.19.0",
+    "soundfile>=0.13.1"
 ]
