--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,10 @@ dependencies = [
     "colorama>=0.4.6",
     "dotenv>=0.9.9",
     "loguru>=0.7.3",
+    "pynput>=1.8.1",
     "python-dotenv>=1.1.1",
     "replicate>=1.0.7",
     "requests>=2.32.5",
     "sounddevice>=0.5.2",
-    "soundfile>=0.13.1"
+    "soundfile>=0.13.1",
 ]
