--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "replicate>=1.0.7",
     "requests>=2.32.5",
+    "rpi-gpio>=0.7.1",
     "sounddevice>=0.5.2",
     "soundfile>=0.13.1",
 ]
