--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ dependencies = [
     "colorama>=0.4.6",
     "dotenv>=0.9.9",
     "loguru>=0.7.3",
+    "pyserial>=3.5",
     "python-dotenv>=1.1.1",
+    "rdlib>=0.9",
     "replicate>=1.0.7",
     "requests>=2.32.5",
     "rpi-gpio>=0.7.1",
