--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
-NEWS_API_KEY="REPLACE_WITH_YOUR_NEWS_API_KEY_HERE_FROM"
-REPLICATE_API_TOKEN="REPLACE_WITH_YOUR_REPLICATE_API_TOKEN_HERE"
-DROPBOX_ACCESS_TOKEN="REPLACE_WITH_YOUR_DROPBOX_ACCESS_TOKEN_HERE"
+NEWS_API_KEY="YOUR_NEWS_API_KEY_HERE"
+REPLICATE_API_TOKEN="YOUR_REPLICATE_API_TOKEN_HERE"
+DROPBOX_CLIENT_ID="YOUR_DROPBOX_CLIENT_ID_HERE"
+DROPBOX_CLIENT_SECRET="YOUR_DROPBOX_CLIENT_SECRET_HERE"
+DROPBOX_REFRESH_TOKEN="YOUR_DROPBOX_REFRESH_TOKEN_HERE"
