--- a/full-cycle-btn.service
+++ b/full-cycle-btn.service
@@ -1,14 +1,14 @@
 [Unit]
 Description=Full Cycle Button Monitor (GPIO17)
-After=network.target
+After=default.target
 
 [Service]
 Type=simple
-User=pi
 WorkingDirectory=/home/pi/daily_mood_theme_song_player
 ExecStart=/home/pi/.local/bin/uv run python run_full_cycle_btn.py
 Restart=on-failure
 RestartSec=5
+SupplementaryGroups=gpio
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
