--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "rdlib>=0.9",
     "replicate>=1.0.7",
     "requests>=2.32.5",
+    "rich>=14.2.0",
     "rpi-gpio>=0.7.1",
     "sounddevice>=0.5.2",
     "soundfile>=0.13.1",
