--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "replicate>=1.0.7",
     "requests>=2.32.5",
     "rich>=14.2.0",
-    "rpi-gpio>=0.7.1",
+    "rpi-gpio>=0.7.1; sys_platform == 'linux'",
     "sounddevice>=0.5.2",
     "soundfile>=0.13.1",
 ]
