--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.11"
 dependencies = [
     "colorama>=0.4.6",
     "dotenv>=0.9.9",
+    "fastapi>=0.128.0",
+    "jinja2>=3.1.6",
     "loguru>=0.7.3",
     "pyserial>=3.5",
     "python-dotenv>=1.1.1",
@@ -17,4 +19,5 @@ dependencies = [
     "rpi-gpio>=0.7.1; sys_platform == 'linux'",
     "sounddevice>=0.5.2",
     "soundfile>=0.13.1",
+    "uvicorn>=0.40.0",
 ]
