feat(logs): Implement WebSocket streaming for live log updates
- Added WebSocket support in logs.py for real-time log streaming.
- Created LogFileHandler to monitor log files and send updates to connected clients.
- Integrated log streaming into app.py by including the logs router.
- Enhanced logs.js to connect to the WebSocket and display logs with color coding based on log levels.
- Implemented terminal initialization and resizing handling for better user experience.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,6 @@ dependencies = [
     "sounddevice>=0.5.2",
     "soundfile>=0.13.1",
     "uvicorn>=0.40.0",
+    "watchdog>=6.0.0",
+    "websockets>=15.0.1",
 ]
